# heartland-rust

./: .env.example  .gitignore  .translation-cache.json  Cargo.toml  README.md  amplify.yml  articles-index.md  build.rs  customHttp.yml  generate_icons.py  tailwind.css
.github/: dependabot.yml
.github/workflows/: audit.yml  translate.yml
.translation-batches/: msgbatch_012JvRYySd6BH32Zho7j3TvA.json  msgbatch_01Rg4YjLRdg8TmkzvVZRzQwQ.json
assets/: tailwind.css
assets/videos/: e-books.webm  frequently-asked-questions.webm  government.webm  green-packaging-initiative.webm  heartland-farmers.webm  imperium-fibers.webm  imperium-filled-resin.webm  lca.webm  natural-fiber-research.webm  sustainable-asphalt-additives.webm  sustainable-building-materials.webm  sustainable-concrete-additives.webm  sustainable-packaging.webm  sustainable-plastic-compounding.webm  sustainable-rubber-additives.webm  whitepapers.webm
content/: README.md
content/articles/: 2-ways-automotive-manufacturers-are-decarbonizing-their-plastic-portfolio-by-2030.md  american-manufacturers.md  (+176 more)
deploy/: .htaccess  README.md
docs/: AMPLIFY.md  build_readme.md  console.md  discovery-heartland.yml  replicate.md  slug-map-heartland.csv  template-spec.md  trackers-heartland.md
infra/: security-headers.md
scripts/: article_inventory.sh  build-ssg.sh  build-tailwind.sh  download-fonts.sh  generate-aeo.py  generate-sitemap.sh  generate-webm.sh  generate-webp.sh  prerender.sh  requirements.txt  translate.py  wrap-webp.py
src/: content.rs  i18n.rs  main.rs  popups.rs  seo.rs  tracking.rs
(+2830 files in other folders)
